<resources>
    <string name="app_name">TapEM</string>
    <string name="mav_id">Mav ID</string>
    <string name="password">Password</string>
    <string name="success">Success</string>
    <string name="try_again">Try again</string>
    <string name="sign_in">Sign IN</string>
    <string name="login">LOGIN</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="date_placeholder">Birthday: mm/dd/yyyy</string>
    <string name="register">Register</string>
    <string name="sex">Sex</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="already_a_member">Already a member?</string>
    <string name="new_member">New here?</string>
    <string name="profile">Profile</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="logout">Logout</string>
    <string name="preference_file_key">tapEM.preferences</string>
    <string name="saved_user_data">SavedUserData</string>
    <string name="user_data_key">USER_DATA</string>
    <string name="update">Update</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="old_passowrd">Old Password</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially uncha</string>
    <string name="dummy_Date">March 27 2018 5 PM to 7 PM</string>
    <string name="dummy_location">Maverick Hall</string>
    <string name="view_details">View Details</string>
    <string name="cancel_event">Cancel Event</string>
    <string name="request_new_event">Request New Event</string>
    <string name="capacity">Capacity: </string>
    <string name="meals_served">Meals Served</string>
    <string name="food_venue">Food Venue</string>
    <string name="no_alcohol">No alcohol served</string>
    <string name="alcohol_served">Alcohol will be served</string>
    <string name="meal_formality">Meal formality</string>
    <string name="caterer_assigned">Caterer:</string>
    <string name="event_details_key">EVENT_DETAILS</string>
    <string name="dialog_prompt_cancel_event">Are you sure you want to \n cancel this event?</string>
    <string name="cancel">CANCEL</string>
    <string name="yes_delete">YES, DELETE</string>
    <string name="event_cancelled_message">This event has been cancelled</string>
    <string name="event_cancelled">CANCELLED</string>
    <string name="cancelled">Cancelled</string>
    <string name="event_active">ACTIVE</string>
    <string name="description">Description</string>
    <string name="title_hint">Title of the event</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="date_picker_hint">Select Date</string>
    <string name="meals">Meals</string>
    <string name="breakfast">Breakfast $8 pp</string>
    <string name="lunch">Lunch 12 pp</string>
    <string name="supper">Supper $18 pp</string>
    <string name="informal">Informal</string>
    <string name="formal">Formal 1.5x</string>
    <string name="alcohol_option">Serve Alcohol +$15 pp</string>
    <string name="confirm_event">Confirm Event</string>
    <string name="estimated_cost">Estimated cost : $</string>
    <string name="browse_users">Browse users</string>
    <string name="view_regs">View New Registrations</string>
    <string name="approve">Approve</string>
    <string name="reject">Reject</string>
    <string name="user_type_admin">ADMIN</string>
    <string name="user_type_general">GENERAL</string>
    <string name="user_active">ACTIVE</string>
    <string name="user_declined">DECLINED</string>
    <string name="delete_user">Delete user</string>
    <string name="users_list_key">USERS_LIST</string>
    <string name="user_pending">REQUESTED</string>
    <string name="decline">Decline</string>
    <string name="is_admin_key">IS_ADMIN</string>
    <string name="delete_user_confirm_mesg">Are you sure you want to delete this user ?</string>
    <string name="user_type_caterer">CATERER</string>
    <string name="user_type_caterer_staff">CATERER STAFF</string>
    <string name="event_request_btn_txt">View new event requests</string>
    <string name="view_planned_events">View planned events</string>
    <string name="event_list_data">EVENTS_LIST</string>
    <string name="requested">Requested</string>
    <string name="event_requested">REQUESTED</string>
    <string name="assign_staff">ASSIGN STAFF</string>
    <string name="available_staff">Available Staff</string>
    <string name="email_id">Email ID</string>


</resources>
