<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="edu.uta.se1.team6.tapem.Activities.LoginActivity"
    android:layout_gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:padding="8dp">

        <EditText
            android:id="@+id/id_textField"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginBottom="8dp"
            style="@style/RoundedTextFields"
            android:hint="@string/mav_id"
            android:inputType="number" />

        <EditText
            android:id="@+id/password_textField"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            style="@style/RoundedTextFields"
            android:padding="8dp"
            android:hint="@string/password"
            android:layout_marginTop="8dp"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/loginBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:padding="8dp"
            android:background="@drawable/rounded_button_grey"
            android:text="@string/login"
            android:textColor="@color/dark_grey"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_member"
                android:textSize="14sp"
                android:layout_marginEnd="4dp"/>
            <TextView
                android:id="@+id/registerLink"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="16sp"
                android:textAllCaps="true"
                android:text="@string/register"/>
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
