<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardUseCompatPadding="true"
    app:cardCornerRadius="4dp"
    android:id="@+id/cardRoot">
s    <RelativeLayout
        android:id="@+id/cardContentHolder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="8dp">
        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Seminar for Android"
            android:textStyle="bold"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/statusMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/requested"/>

        <ImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_below="@id/title"
            android:visibility="gone"
            android:background="@color/dark_grey"/>
        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:lines="2"
            android:layout_below="@id/image"
            android:ellipsize="middle"
            android:text="@string/lorem_ipsum"
            android:layout_marginTop="4dp"/>
        <TextView
            android:id="@+id/dateData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dummy_Date"
            android:layout_below="@id/description"
            android:drawableStart="@drawable/vector_drawable_ic_access_time___px"
            android:gravity="center_vertical"
            android:layout_marginTop="4dp"
            android:drawablePadding="4dp"/>
        <TextView
            android:id="@+id/locationData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dummy_location"
            android:layout_below="@id/dateData"
            android:drawableStart="@drawable/vector_drawable_ic_location_on___px"
            android:gravity="center_vertical"
            android:layout_marginTop="4dp"
            android:drawablePadding="4dp"
            android:lines="1"/>
        <View
            android:id="@+id/seperator"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@id/locationData"
            android:background="@color/light_grey"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"/>
        <RelativeLayout
            android:id="@+id/buttonBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/seperator">

            <Button
                android:id="@+id/cancelAction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/cancel_event"
                android:textColor="@color/red"
                android:drawableStart="@drawable/vector_drawable_ic_cancel___px"
                android:drawablePadding="8dp"
                android:drawableTint="@color/red"
                android:visibility="gone"
                style="?android:attr/borderlessButtonStyle"/>

            <TextView
                android:id="@+id/cancelledMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancelled"
                android:layout_below="@id/catererSection"
                android:padding="12dp"
                android:textStyle="bold|italic"
                android:visibility="gone"/>

            <Button
                android:id="@+id/viewAction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:text="@string/view_details"
                style="?android:attr/borderlessButtonStyle"
                android:drawablePadding="8dp"
                android:textColor="@color/green"
                android:drawableEnd="@drawable/vector_drawable_ic_arrow_forward___px"
                android:drawableTint="@color/green"/>
        </RelativeLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>