<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="5dp"
    android:layout_gravity="center_horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:padding="8dp">

        <TextView
            android:id="@+id/prompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="8dp"
            android:layout_centerHorizontal="true"
            android:text="@string/dialog_prompt_cancel_event"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignParentEnd="true"
            android:layout_below="@id/prompt"
            android:gravity="end">

            <Button
                android:id="@+id/cancelAction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/cancel"
                android:textColor="@color/green"
                android:drawableTint="@color/red"
                style="?android:attr/borderlessButtonStyle"/>

            <Button
                android:id="@+id/confirmAction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:text="@string/yes_delete"
                android:textColor="@color/red"
                android:drawableTint="@color/red"
                style="?android:attr/borderlessButtonStyle"/>


        </LinearLayout>


    </RelativeLayout>
</android.support.v7.widget.CardView>
