<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/root_component"
    tools:context="edu.uta.se1.team6.tapem.Activities.MainActivity">
    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/grey"/>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_grey"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_grey">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/eventsRecycler"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="visible"
                android:paddingBottom="56dp"/>

            <LinearLayout
                android:id="@+id/adminPanel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone"
                android:padding="8dp">

                <Button
                    android:id="@+id/browseUsersBtn"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    style="@style/RoundedTextFields"
                    android:layout_marginBottom="8dp"
                    android:text="@string/browse_users"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/newRegsBtn"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    style="@style/RoundedTextFields"
                    android:layout_marginBottom="8dp"
                    android:text="@string/view_regs"
                    android:gravity="center"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>

        </RelativeLayout>

    </android.support.v4.widget.NestedScrollView>

    <TextView
        android:id="@+id/requestEventButton"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_gravity="bottom"
        android:text="@string/request_new_event"
        android:gravity="center"
        android:background="@color/colorAccent"
        android:textColor="@color/white"
        android:textAllCaps="true"
        app:layout_scrollFlags="scroll|enterAlways|snap"
        android:textSize="16sp"
        android:visibility="gone"
        android:textStyle="bold"/>
</android.support.design.widget.CoordinatorLayout>
